objects/ASI_CN_NPL_NPL_Forecast__c.object
<CustomObject>
    <description>ASI CN New Product Launch Forecast, Master-Detail child object of New Product Launch Request</description>
    <fields>
        <fullName>ASI_CN_NPL_M1__c</fullName>
        <label>M1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_M2__c</fullName>
        <label>M2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_M3__c</fullName>
        <label>M3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>South West</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>Macau</fullName>
                </value>
                <value>
                    <fullName>Mongolia</fullName>
                </value>
                <value>
                    <fullName>STK3</fullName>
                </value>
                <value>
                    <fullName>HQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Volume</fullName>
                </value>
                <value>
                    <fullName>Old Stock Inventory</fullName>
                </value>
                <value>
                    <fullName>Old Stock Depletion</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Product_Launch_Request__c</fullName>
        <label>New Product Launch Request</label>
        <referenceTo>ASI_CN_NPL_NPL_Request__c</referenceTo>
        <relationshipLabel>New Product Launch Forecasts</relationshipLabel>
        <relationshipName>New_Product_Launch_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>New Product Launch Forecast</label>
    <nameField>
        <displayFormat>NPLF-{YY}-{00000}</displayFormat>
        <label>NPL Forecast Ref Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Product Launch Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>